--- a/index.html
+++ b/index.html
@@ -75,37 +75,37 @@
                 </div>
                 <div class="row text-center mt-5">
                   <div class="col-lg-4 col-6 mb-4 p-0">
-                    <img class="img-quality" src="assets/img/quality-01.svg"/>
+                    <img class="img-quality" src="assets/img/quality-01.png"/>
                     <p class="text-white medium txt-09">
                       Membrane-based<br />technology
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4 p-0">
-                    <img class="img-quality" src="assets/img/quality-02.svg"/>
+                    <img class="img-quality" src="assets/img/quality-02.png"/>
                     <p class="text-white medium txt-09">
                       1,000,000+<br />data points per ear
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4 p-0">
-                    <img class="img-quality" src="assets/img/quality-03.svg"/>
+                    <img class="img-quality" src="assets/img/quality-03.png"/>
                     <p class="text-white medium txt-09">
                       Developed<br />at MIT
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4 p-0">
-                    <img class="img-quality" src="assets/img/quality-04.svg"/>
+                    <img class="img-quality" src="assets/img/quality-04.png"/>
                     <p class="text-white medium txt-09">
                     FDA 510K<br />cleared
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4 p-0">
-                    <img class="img-quality" src="assets/img/quality-05.svg"/>
+                    <img class="img-quality" src="assets/img/quality-05.png"/>
                     <p class="text-white medium txt-09">
                       Protected by<br />70+ patents
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4 p-0">
-                    <img class="img-quality" src="assets/img/quality-06.svg"/>
+                    <img class="img-quality" src="assets/img/quality-06.png"/>
                     <p class="text-white medium txt-09">
                       Digital work flow<br />efficiency and speed
                     </p>
@@ -170,12 +170,14 @@
         </section>
         <!-- Signup-->
 
+
         <img class="divider-mobile" src="assets/img/divider-mobile-2.svg" style="margin-bottom:-.5vw;" />
         <section class="team-section" id="team">
-        <img class="" src="assets/img/divider-2.svg" style="margin-top:-11.65vw;"/>
         <div class="container-fluid" style="position:relative;">
           <img class="back-resource-team" src="assets/img/back-resource.svg"/>
+          <img class="divider-desktop" src="assets/img/divider-2.svg" style="top:-6.35vw;position: absolute;z-index: 0;"/>
         </div>
+
             <div class="container text-center">
               <h2 class="text-white"><b>Leadership team</b></h2>
               <div class="hr-divider-white mx-auto"></div>
@@ -213,9 +215,9 @@
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-susan.png"/>
-                  <h5 class="text-white"><b>Susan Richard</b></h5>
+                  <h5 class="text-white"><b>Susan Whichard</b></h5>
                   <h5 class="text-white">Founding Strategic Advisor</h5>
-                  <a target="_blank" href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/susanwhichard/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-erin.png"/>
@@ -229,6 +231,7 @@
         </section>
         <img class="divider-desktop" src="assets/img/divider-3.svg" style="margin-top:-.25vw;" />
         <img class="divider-mobile" src="assets/img/divider-mobile-3.svg" style="margin-top:-4.3vw;"/>
+
         <section class="contact-section" id="contact">
           <div class="container mt-5 mb-5">
             <h2 class="text-center text-mint"><b>Want to learn more?</b></h2>
