--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="twitter:card" content="" summary="" />
+    <meta name="twitter:site" content="@lantostech"/>
+    <meta name="twitter:title" content="Cyabra | More Than Listening" />
+
+    <meta property="og:title" content="Cyabra | More Than Listening"/>
+    <meta property="og:description" content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."/>
+    <meta property="og:url" content="https://www.lantostechnologies.com/"/>
+    <meta property="og:image" itemprop="image" content="assets/img/logo-lantos.png"/>
+    <meta property="og:type" content="website" />
+
     <title>Lantos web</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
