--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                     type="email"
                     class="form-control"
                     id="inputEmail"
-                    name="email"
+                    name="inputEmail"
                     placeholder="Email"
                   />
                 </div>
@@ -437,7 +437,7 @@
                 <textarea
                   class="form-control"
                   id="inputMessage"
-                  name="message"
+                  name="inputMessage"
                   rows="3"
                   placeholder="Message"
                 ></textarea>
