--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
   </head>
-  
+
   <body id="page-top">
         <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PSSWSH2"
@@ -143,11 +143,12 @@
             </p>
           </div>
         </div>
-        <a
-          class="btn btn-primary js-scroll-trigger mt-4 btn-gradient"
-          href="#about"
-          >Download a Hearing Review article</a
-        >
+
+        <!-- EN ESTE HREF VA LA URL DEL PDF -->
+        <a class="btn btn-primary js-scroll-trigger mt-4 btn-gradient" href="">
+          Download a Hearing Review article
+        </a>
+
         <div class="container mt-5">
           <video
             width="100%"
@@ -205,13 +206,13 @@
       style="margin-top: -6vw"
     />
     <!-- Projects-->
-    <section class="why-section" id="why-lantos">
-      <div class="container text-center">
+    <section class="why-section px-0" id="why-lantos">
+      <div class="container text-center" style="padding-right:0!important;">
         <h2 class="mb-4 text-mint">
           <b>Better experiences, better outcomes</b>
         </h2>
         <div class="hr-divider-grey mx-auto"></div>
-        <div class="row">
+        <div class="row mt-5 px-4">
           <div class="col-lg-4 col-12">
             <img src="assets/img/why-01.svg" />
             <p>
@@ -288,7 +289,7 @@
         </div>
       </div>
     </section>
-    <!-- Signup-->
+
 
     <img
       class="divider-mobile"
@@ -305,10 +306,11 @@
         />
       </div>
 
-      <div class="container text-center">
-        <h2 class="text-white"><b>Leadership team</b></h2>
+      <div class="container text-center px-0">
+        <h2 class="text-white mobile-no mb-4"><b>Leadership team</b></h2>
+        <h2 class="text-white mobile mb-4"><b>Leadership<br />team</b></h2>
         <div class="hr-divider-white mx-auto"></div>
-        <div class="row mt-4">
+        <div class="row mt-5">
           <div class="col-lg-7 col-10 mx-auto">
             <p class="text-white">
               The Lantos <b>leadership team</b> is deeply experienced in and
@@ -319,56 +321,56 @@
           </div>
         </div>
         <div class="responsive mt-4" id="slick-team">
-          <div class="container text-center pb-5">
+          <div class="container text-center pb-6 px-0">
             <img class="img-team" src="assets/img/team-paul.png" />
             <h5 class="text-white"><b>Paul Harkness</b></h5>
             <h5 class="text-white">Chief Executive Officer</h5>
             <a target="_blank" href="https://www.linkedin.com/in/pauleharkness/"
-              ><img class="btn-li" src="assets/img/btn-linkedin.svg"
+              ><img class="btn-li mt-4" src="assets/img/btn-linkedin.svg"
             /></a>
           </div>
-          <div class="container text-center pb-5">
+          <div class="container text-center pb-6 px-0">
             <img class="img-team" src="assets/img/team-joe.png" />
             <h5 class="text-white"><b>Joe St. Cyr</b></h5>
             <h5 class="text-white">Chief Technical Officer</h5>
             <a
               target="_blank"
               href="https://www.linkedin.com/in/joe-st-cyr-b60a161/"
-              ><img class="btn-li" src="assets/img/btn-linkedin.svg"
+              ><img class="btn-li mt-4" src="assets/img/btn-linkedin.svg"
             /></a>
           </div>
-          <div class="container text-center pb-5">
+          <div class="container text-center pb-6 px-0">
             <img class="img-team" src="assets/img/team-carrie.png" />
             <h5 class="text-white"><b>Carrie Jo Hoelzel</b></h5>
             <h5 class="text-white">Sr. Director, Customer Experience</h5>
             <a
               target="_blank"
               href="https://www.linkedin.com/in/carriejo-h-815a402a/"
-              ><img class="btn-li" src="assets/img/btn-linkedin.svg"
+              ><img class="btn-li mt-4" src="assets/img/btn-linkedin.svg"
             /></a>
           </div>
-          <div class="container text-center pb-5">
+          <div class="container text-center pb-6 px-0">
             <img class="img-team" src="assets/img/team-brian.png" />
             <h5 class="text-white"><b>Brian Fligor, PhD</b></h5>
             <h5 class="text-white">Founding Clinical-Strategic Advisor</h5>
             <a target="_blank" href="https://www.linkedin.com/in/brianfligor/"
-              ><img class="btn-li" src="assets/img/btn-linkedin.svg"
+              ><img class="btn-li mt-4" src="assets/img/btn-linkedin.svg"
             /></a>
           </div>
-          <div class="container text-center pb-5">
+          <div class="container text-center pb-6 px-0">
             <img class="img-team" src="assets/img/team-susan.png" />
             <h5 class="text-white"><b>Susan Whichard</b></h5>
             <h5 class="text-white">Founding Strategic Advisor</h5>
             <a target="_blank" href="https://www.linkedin.com/in/susanwhichard/"
-              ><img class="btn-li" src="assets/img/btn-linkedin.svg"
+              ><img class="btn-li mt-4" src="assets/img/btn-linkedin.svg"
             /></a>
           </div>
-          <div class="container text-center pb-5">
+          <div class="container text-center pb-6 px-0">
             <img class="img-team" src="assets/img/team-erin.png" />
             <h5 class="text-white"><b>Erin Henry, AuD</b></h5>
             <h5 class="text-white">Sr. Director, Product Management</h5>
             <a target="_blank" href="https://www.linkedin.com/in/erinhenry24/"
-              ><img class="btn-li" src="assets/img/btn-linkedin.svg"
+              ><img class="btn-li mt-4" src="assets/img/btn-linkedin.svg"
             /></a>
           </div>
         </div>
