--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 
           <div class="container mt-5">
             <video
+              class="membrane-video"
               width="100%"
               height="auto"
               controls
@@ -420,7 +421,7 @@
           src="assets/img/divider-3.svg"
           style="margin-top: -0.25vw"
         />
-      
+
         <img
           class="divider-mobile"
           src="assets/img/divider-mobile-3.svg"
@@ -506,18 +507,10 @@
             </div>
             <div class="col-lg-3 col-6">
               <p><b class="text-white">Sitemap</b></p>
-              <a href="#about" class="text-white js-scroll-trigger"
-                ><p class="mb-05">How it works</p></a
-              >
-              <a href="#why-lantos" class="text-white js-scroll-trigger"
-                ><p class="mb-05">About us</p></a
-              >
-              <a href="#team" class="text-white js-scroll-trigger"
-                ><p class="mb-05">Why Lantos</p></a
-              >
-              <a href="#contact" class="text-white js-scroll-trigger"
-                ><p class="mb-05">Contact</p></a
-              >
+              <a href="#about" class="text-white js-scroll-trigger"><p class="mb-05">How it works</p></a>
+              <a href="#why-lantos" class="text-white js-scroll-trigger"><p class="mb-05">Why Lantos</p></a>
+              <a href="#team" class="text-white js-scroll-trigger"><p class="mb-05">About us</p></a>
+              <a href="#contact" class="text-white js-scroll-trigger"><p class="mb-05">Contact</p></a>
             </div>
             <div class="col-lg-3 col-6">
               <p><b class="text-white">Contact us</b></p>
