--- a/index.html
+++ b/index.html
@@ -22,24 +22,29 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no,minimum-scale=1"
     />
 
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <meta name="twitter:card" content="" summary="" />
-    <meta name="twitter:site" content="@lantostech" />
-    <meta name="twitter:title" content="Cyabra | More Than Listening" />
-
-    <meta property="og:title" content="Cyabra | More Than Listening" />
+    <meta property="og:site_name" content="Lantos web"/>
+    <meta property="og:title" content="Cyabra | More Than Listening"/>
     <meta
       property="og:description"
       content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
     />
     <meta property="og:url" content="https://www.lantostechnologies.com/" />
-    <meta
-      property="og:image"
-      itemprop="image"
-      content="assets/img/logo-lantos.png"
-    />
+    <meta property="og:image" itemprop="image" content="assets\img\tw-graph-card.jpg"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="627"/>
+    <meta property="og:image:alt" content="Lantos web"/>
     <meta property="og:type" content="website" />
+    <meta name="format-detection" content="telephone=no">      
+    <meta property="og:locale" content="es_AR" />
+    <meta name="twitter:title" content="Cyabra | More Than Listening">
+    <meta name="twitter:description" content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences.">
+    <meta name="twitter:image" content="assets\img\tw-graph-card.jpg">
+    <meta name="twitter:site" content="@lantostech" />
+
+    <meta name="description" content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."/>
+    <meta name="author" content="Lantos web" />
+    <meta name="twitter:card" content="" summary="" />
+
 
     <title>Lantos web</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
