--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
     />
     <meta property="og:url" content="https://www.lantostechnologies.com/" />
-    <meta property="og:image" itemprop="image" content="assets\img\tw-graph-card.jpg"/>
+    <meta property="og:image" itemprop="image" content="assets/img/tw-graph-card.jpg"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="627"/>
     <meta property="og:image:alt" content="Lantos web"/>
@@ -38,7 +38,7 @@
     <meta property="og:locale" content="es_AR" />
     <meta name="twitter:title" content="Cyabra | More Than Listening">
     <meta name="twitter:description" content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences.">
-    <meta name="twitter:image" content="assets\img\tw-graph-card.jpg">
+    <meta name="twitter:image" content="assets/img/tw-graph-card.jpg">
     <meta name="twitter:site" content="@lantostech" />
 
     <meta name="description" content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."/>
