--- a/index.html
+++ b/index.html
@@ -22,29 +22,38 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no,minimum-scale=1"
     />
 
-    <meta property="og:site_name" content="Lantos web"/>
-    <meta property="og:title" content="Cyabra | More Than Listening"/>
+    <meta property="og:site_name" content="Lantos web" />
+    <meta property="og:title" content="Cyabra | More Than Listening" />
     <meta
       property="og:description"
       content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
     />
     <meta property="og:url" content="https://www.lantostechnologies.com/" />
-    <meta property="og:image" itemprop="image" content="assets/img/tw-graph-card.jpg"/>
-    <meta property="og:image:width" content="1200"/>
-    <meta property="og:image:height" content="627"/>
-    <meta property="og:image:alt" content="Lantos web"/>
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="assets/img/tw-graph-card.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <meta property="og:image:alt" content="Lantos web" />
     <meta property="og:type" content="website" />
-    <meta name="format-detection" content="telephone=no">      
+    <meta name="format-detection" content="telephone=no" />
     <meta property="og:locale" content="es_AR" />
-    <meta name="twitter:title" content="Cyabra | More Than Listening">
-    <meta name="twitter:description" content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences.">
-    <meta name="twitter:image" content="assets/img/tw-graph-card.jpg">
+    <meta name="twitter:title" content="Cyabra | More Than Listening" />
+    <meta
+      name="twitter:description"
+      content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
+    />
+    <meta name="twitter:image" content="assets/img/tw-graph-card.jpg" />
     <meta name="twitter:site" content="@lantostech" />
 
-    <meta name="description" content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."/>
+    <meta
+      name="description"
+      content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
+    />
     <meta name="author" content="Lantos web" />
     <meta name="twitter:card" content="" summary="" />
-
 
     <title>Lantos web</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -63,6 +72,8 @@
     <!-- Slick Carousel-->
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="slick/slick.js?9"></script>
   </head>
 
   <body id="page-top">
@@ -330,13 +341,17 @@
       <img
         class="divider-mobile"
         src="assets/img/divider-mobile-2.svg"
-        style="margin-bottom: -2px;"
+        style="margin-bottom: -2px"
       />
 
       <div style="position: relative">
-        <div class="container-fluid" style="padding: 0;">
+        <div class="container-fluid" style="padding: 0">
           <img class="back-resource-team" src="assets/img/back-resource.svg" />
-          <img class="divider-desktop" src="assets/img/divider-2.svg" style="margin-bottom: -3px;"/>
+          <img
+            class="divider-desktop"
+            src="assets/img/divider-2.svg"
+            style="margin-bottom: -3px"
+          />
         </div>
 
         <section class="team-section" id="team" style="position: relative">
@@ -421,16 +436,13 @@
           </div>
         </section>
       </div>
-        <img
-          class="divider-desktop"
-          src="assets/img/divider-3.svg"
-          style="margin-top: -0.25vw"
-        />
+      <img
+        class="divider-desktop"
+        src="assets/img/divider-3.svg"
+        style="margin-top: -0.25vw"
+      />
 
-        <img
-          class="divider-mobile"
-          src="assets/img/divider-mobile-3.svg"
-        />
+      <img class="divider-mobile" src="assets/img/divider-mobile-3.svg" />
 
       <section class="contact-section" id="contact">
         <div class="container mt-5 mb-5">
@@ -512,10 +524,18 @@
             </div>
             <div class="col-lg-3 col-6">
               <p><b class="text-white">Sitemap</b></p>
-              <a href="#about" class="text-white js-scroll-trigger"><p class="mb-05">How it works</p></a>
-              <a href="#why-lantos" class="text-white js-scroll-trigger"><p class="mb-05">Why Lantos</p></a>
-              <a href="#team" class="text-white js-scroll-trigger"><p class="mb-05">About us</p></a>
-              <a href="#contact" class="text-white js-scroll-trigger"><p class="mb-05">Contact</p></a>
+              <a href="#about" class="text-white js-scroll-trigger"
+                ><p class="mb-05">How it works</p></a
+              >
+              <a href="#why-lantos" class="text-white js-scroll-trigger"
+                ><p class="mb-05">Why Lantos</p></a
+              >
+              <a href="#team" class="text-white js-scroll-trigger"
+                ><p class="mb-05">About us</p></a
+              >
+              <a href="#contact" class="text-white js-scroll-trigger"
+                ><p class="mb-05">Contact</p></a
+              >
             </div>
             <div class="col-lg-3 col-6">
               <p><b class="text-white">Contact us</b></p>
@@ -657,15 +677,13 @@
     </footer>
 
     <!-- Bootstrap core JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
     <!-- Core theme JS-->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="js/scripts.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+
     <script>
       $(document).ready(function () {
         $(".responsive").slick({
@@ -691,6 +709,22 @@
           slidesToShow: 1.03,
           slidesToScroll: 1,
         });
+
+        // On before slide change
+        $(".responsive").on(
+          "beforeChange",
+          function (event, slick, currentSlide, nextSlide) {
+    
+          }
+        );
+
+        // On before slide change
+        $(".responsive").on(
+          "afterChange",
+          function (event, slick, currentSlide, nextSlide) {
+         
+          }
+        );
       });
     </script>
   </body>
