--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           </div>
           <h3 class="mt-5">Testimonials</h3>
           <div class="hr-divider-grey mx-auto"></div>
-          <div class="row mt-6 mobile-no">
+          <div class="row mt-6 mobile-no" style="z-index: 9;">
             <div class="col-lg-6 col-12">
               <div class="container">
                 <video
@@ -344,17 +344,17 @@
         style="margin-bottom: -2px"
       />
 
-      <div style="position: relative">
+      <div style="position: relative;    overflow: hidden;">
         <div class="container-fluid" style="padding: 0">
           <img class="back-resource-team" src="assets/img/back-resource.svg" />
           <img
             class="divider-desktop"
             src="assets/img/divider-2.svg"
-            style="margin-bottom: -3px"
+            style="margin-bottom: -1px"
           />
         </div>
 
-        <section class="team-section" id="team" style="position: relative">
+        <section class="team-section" id="team" style="position: relative;">
           <div class="container text-center px-0">
             <h2 class="text-white mobile-no mb-4"><b>Leadership team</b></h2>
             <h2 class="text-white mobile mb-4">
