--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <meta property="og:image:height" content="627" />
     <meta property="og:image:alt" content="Lantos web" />
     <meta property="og:type" content="website" />
+    <meta property="og:title" content="Lantos web" />
+    <meta
+    name="og:description"
+    content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
+  />
     <meta name="format-detection" content="telephone=no" />
     <meta property="og:locale" content="es_AR" />
     <meta name="twitter:title" content="Cyabra | More Than Listening" />
@@ -53,7 +58,6 @@
       content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
     />
     <meta name="author" content="Lantos web" />
-    <meta name="twitter:card" content="" summary="" />
 
     <title>Lantos web</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
