--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -32,7 +33,7 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="assets/img/tw-graph-card.jpg"
+      content="https://micavankooten.github.io/lantos-test/assets/img/tw-graph-card.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
@@ -50,7 +51,7 @@
       name="twitter:description"
       content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
     />
-    <meta name="twitter:image" content="assets/img/tw-graph-card.jpg" />
+    <meta name="twitter:image" content="https://micavankooten.github.io/lantos-test/assets/img/tw-graph-card.jpg" />
     <meta name="twitter:site" content="@lantostech" />
 
     <meta
@@ -60,7 +61,7 @@
     <meta name="author" content="Lantos web" />
 
     <title>Lantos web</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://micavankooten.github.io/lantos-test/assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
