--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
 
     <meta property="og:site_name" content="Lantos web" />
-    <meta property="og:title" content="Cyabra | More Than Listening" />
+    <meta property="og:title" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
       property="og:description"
       content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
@@ -37,28 +37,31 @@
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
-    <meta property="og:image:alt" content="Lantos web" />
+    <meta property="og:image:alt" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Lantos web" />
+    <meta property="og:title" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
     name="og:description"
-    content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
+    content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era.
+    "
   />
     <meta name="format-detection" content="telephone=no" />
     <meta property="og:locale" content="es_AR" />
-    <meta name="twitter:title" content="Cyabra | More Than Listening" />
+    <meta name="twitter:title" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
       name="twitter:description"
-      content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
+      content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era.
+      "
     />
     <meta name="twitter:image" content="https://micavankooten.github.io/lantos-test/assets/img/tw-graph-card.jpg" />
     <meta name="twitter:site" content="@lantostech" />
 
     <meta
       name="description"
-      content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
+      content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era.
+      "
     />
-    <meta name="author" content="Lantos web" />
+    <meta name="author" content="Lantos Technologies | 3D Digital Ear Scanning" />
 
     <title>Lantos web</title>
     <link rel="icon" type="image/x-icon" href="https://micavankooten.github.io/lantos-test/assets/img/favicon.ico" />
