--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
       property="og:description"
-      content="Cyabra breaks down social media so you can understand narratives, detect authenticity and reach true audiences."
+      content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era."
     />
     <meta property="og:url" content="https://www.lantostechnologies.com/" />
     <meta
@@ -42,16 +42,14 @@
     <meta property="og:title" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
     name="og:description"
-    content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era.
-    "
+    content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era."
   />
     <meta name="format-detection" content="telephone=no" />
     <meta property="og:locale" content="es_AR" />
     <meta name="twitter:title" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
       name="twitter:description"
-      content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era.
-      "
+      content="The Lantos 3D Scanning System brings the process for taking ear impressions for personalized hearing products into the digital era."
     />
     <meta name="twitter:image" content="https://micavankooten.github.io/lantos-test/assets/img/tw-graph-card.jpg" />
     <meta name="twitter:site" content="@lantostech" />
