--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     />
     <meta name="author" content="Lantos Technologies | 3D Digital Ear Scanning" />
 
-    <title>Lantos web</title>
+    <title>Lantos Technologies | 3D Digital Ear Scanning</title>
     <link rel="icon" type="image/x-icon" href="https://micavankooten.github.io/lantos-test/assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
