--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
         });
 
         /* Do this every time window gets resized */
-        $(window).on("resize", function () {
+        window.addEventListener('resize', function () {
           /* If we are above mobile breakpoint unslick the slider */
 
           if ($(window).width() < 768) {
@@ -746,6 +746,11 @@
             }
           }
         });
+
+        window.addEventListener("orientationchange", function() {
+            // Generate a resize event if the device doesn't do it
+            window.dispatchEvent(new Event("resize"));
+        }, false);
 
         // On before slide change
         $(".responsive").on(
