--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
       </section>
       <div
         class="divider-mobile"
-        style="margin-bottom: -2px; background: #fff;"
+        style="margin-bottom: -1px; background: #fff;"
       >
-        <img src="assets/img/divider-mobile-2.svg" />
+        <img src="assets/img/divider-mobile-2.png" style="width: 100%;"/>
       </div>
       <div style="position: relative; overflow: hidden">
         <div class="container-fluid" style="padding: 0">
@@ -447,7 +447,7 @@
         style="margin-top: -0.25vw"
       />
       <div class="divider-mobile" style="margin-top: -2px; background: #fff">
-        <img src="assets/img/divider-mobile-3.svg" style="z-index: 8" />
+        <img src="assets/img/divider-mobile-3.png" style="width: 100%;" />
       </div>
       <section class="contact-section" id="contact">
         <div class="container mt-5 mb-5">
