--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no,minimum-scale=1"
     />
 
-    <meta property="og:site_name" content="Lantos web" />
+    <meta property="og:site_name" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
       property="og:title"
       content="Lantos Technologies | 3D Digital Ear Scanning"
