--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no,minimum-scale=1"
     />
 
+    <meta name="twitter:card" content="summary"></meta>
     <meta property="og:site_name" content="Lantos Technologies | 3D Digital Ear Scanning" />
     <meta
       property="og:title"
