--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link href="css/rtop.videoPlayer.1.0.2.min.css?15" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css?15" rel="stylesheet" />
+    <link href="css/styles.css?19" rel="stylesheet" />
     <!-- Slick Carousel-->
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css?8" />
@@ -311,36 +312,23 @@
           <div class="multiple-items mt-4 mt-md-6 row">
             <div class="col-md-6">
               <div class="container text-left pb-5">
-                <video
-                  width="100%"
-                  height="auto"
-                  controls
-                  poster="assets/img/poster-video-2.png"
-                >
-                  <source
-                    src="assets/video/testimony-01.mp4"
-                    type="video/mp4"
-                  />
-                </video>
-                <h5 class="mobile-1000"><b>Hear from a Consumer</b></h5>
+                <div class="videos" data-video="assets/video/testimony-02.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-3.png">
+
+                </div>
+
+                <h5 class="mobile-1000"><b>Hear from an Audiologist</b></h5>
               </div>
             </div>
             <div class="col-md-6">
               <div class="container text-left pb-5">
-                <video
-                  width="100%"
-                  height="auto"
-                  controls
-                  poster="assets/img/poster-video-3.png"
-                >
-                  <source
-                    src="assets/video/testimony-02.mp4"
-                    type="video/mp4"
-                  />
-                </video>
-                <h5 class="mobile-1000"><b>Hear from an Audiologist</b></h5>
+                <div class="videos" data-video="assets/video/testimony-01.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-2.png">
+
+                </div>
+
+                <h5 class="mobile-1000"><b>Hear from a Consumer</b></h5>
               </div>
             </div>
+
           </div>
         </div>
       </section>
@@ -689,6 +677,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script src="js/rtop.videoPlayer.1.0.2.min.js"></script>
 
     <script>
       $(document).ready(function () {
@@ -766,5 +755,6 @@
         );
       });
     </script>
+        <script src="js/videos.js"></script>
   </body>
 </html>
