--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     />
 
     <title>Lantos Technologies | 3D Digital Ear Scanning</title>
+    	<!-- font awesome if optional but highly recommended -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link
       rel="icon"
       type="image/x-icon"
@@ -220,15 +222,8 @@
           </a>
 
           <div class="container mt-5">
-            <video
-              class="membrane-video"
-              width="100%"
-              height="auto"
-              controls
-              poster="assets/img/poster-video.png"
-            >
-              <source src="assets/video/membrane-video.mp4" type="video/mp4" />
-            </video>
+            <div class="videos" data-video="assets/video/membrane-video.mp4" data-type="video/mp4" data-poster="assets/img/poster-video.png">
+
           </div>
           <div class="row text-center mt-5">
             <div class="col-lg-4 col-6 mb-4 p-0">
