--- a/index.html
+++ b/index.html
@@ -697,8 +697,9 @@
           dots: true,
           infinite: true,
           arrows: false,
-          slidesToShow: 1.07,
+          slidesToShow: 1,
           slidesToScroll: 1,
+          adaptiveHeight: true,
           mobileFirst: true,
           responsive: [
             {
@@ -718,7 +719,8 @@
                 dots: true,
                 infinite: true,
                 arrows: false,
-                slidesToShow: 1.07,
+                slidesToShow: 1,
+                adaptiveHeight: true,
                 slidesToScroll: 1,
                 mobileFirst: true,
                 responsive: [
