--- a/index.html
+++ b/index.html
@@ -695,9 +695,9 @@
 
         $(".multiple-items").slick({
           dots: true,
-          infinite: true,
+          infinite: false,
           arrows: false,
-          slidesToShow: 1,
+          slidesToShow: 1.07,
           slidesToScroll: 1,
           adaptiveHeight: true,
           mobileFirst: true,
@@ -719,7 +719,7 @@
                 dots: true,
                 infinite: true,
                 arrows: false,
-                slidesToShow: 1,
+                slidesToShow: 1.07,
                 adaptiveHeight: true,
                 slidesToScroll: 1,
                 mobileFirst: true,
