--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css?19" rel="stylesheet" />
     <!-- Slick Carousel-->
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css?9998" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css?8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="slick/slick.js?9"></script>
@@ -307,7 +307,7 @@
           <div class="multiple-items mt-4 mt-md-6 row">
             <div class="col-md-6">
               <div class="container text-left pb-5">
-                <div class="videos" data-video="assets/video/testimony-02.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-3.png">
+                <div class="videos testimonios" data-video="assets/video/testimony-02.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-3.png" data-parent='multiple-items'>
 
                 </div>
 
@@ -316,7 +316,7 @@
             </div>
             <div class="col-md-6">
               <div class="container text-left pb-5">
-                <div class="videos" data-video="assets/video/testimony-01.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-2.png">
+                <div class="videos testimonios" data-video="assets/video/testimony-01.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-2.png" data-parent='multiple-items'>
 
                 </div>
 
