--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     />
     <link href="css/rtop.videoPlayer.1.0.2.min.css?15" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css?19" rel="stylesheet" />
+    <link href="css/styles.css?24" rel="stylesheet" />
     <!-- Slick Carousel-->
     <link rel="stylesheet" type="text/css" href="slick/slick.css?9998" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css?8" />
@@ -364,7 +364,7 @@
               <div class="container text-center pb-6 px-0">
                 <img class="img-team" src="assets/img/team-paul.png" />
                 <h5 class="text-white"><b>Paul Harkness</b></h5>
-                <h5 class="text-white">Chief Executive Officer</h5>
+                <h5 class="text-white leadership-description">Chief Executive Officer</h5>
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/pauleharkness/"
@@ -374,7 +374,7 @@
               <div class="container text-center pb-6 px-0">
                 <img class="img-team" src="assets/img/team-joe.png" />
                 <h5 class="text-white"><b>Joe St. Cyr</b></h5>
-                <h5 class="text-white">Chief Technical Officer</h5>
+                <h5 class="text-white leadership-description">Chief Technical Officer</h5>
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/joe-st-cyr-b60a161/"
@@ -384,7 +384,7 @@
               <div class="container text-center pb-6 px-0">
                 <img class="img-team" src="assets/img/team-carrie.png" />
                 <h5 class="text-white"><b>Carrie Jo Hoelzel</b></h5>
-                <h5 class="text-white">Sr. Director, Customer Experience</h5>
+                <h5 class="text-white leadership-description">Sr. Director, Customer Experience</h5>
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/carriejo-h-815a402a/"
@@ -394,7 +394,7 @@
               <div class="container text-center pb-6 px-0">
                 <img class="img-team" src="assets/img/team-brian.png" />
                 <h5 class="text-white"><b>Brian Fligor, PhD</b></h5>
-                <h5 class="text-white">Founding Clinical-Strategic Advisor</h5>
+                <h5 class="text-white leadership-description">Founding Clinical-Strategic Advisor</h5>
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/brianfligor/"
@@ -404,7 +404,7 @@
               <div class="container text-center pb-6 px-0">
                 <img class="img-team" src="assets/img/team-susan.png" />
                 <h5 class="text-white"><b>Susan Whichard</b></h5>
-                <h5 class="text-white">Founding Strategic Advisor</h5>
+                <h5 class="text-white leadership-description">Founding Strategic Advisor</h5>
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/susanwhichard/"
@@ -414,7 +414,7 @@
               <div class="container text-center pb-6 px-0">
                 <img class="img-team" src="assets/img/team-erin.png" />
                 <h5 class="text-white"><b>Erin Henry, AuD</b></h5>
-                <h5 class="text-white">Sr. Director, Product Management</h5>
+                <h5 class="text-white leadership-description">Sr. Director, Product Management</h5>
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/erinhenry24/"
