--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
             if (! $(".multiple-items").hasClass("slick-initialized")) {
               return $(".multiple-items").slick({
                 dots: true,
-                infinite: true,
+                infinite: false,
                 arrows: false,
                 slidesToShow: 1.07,
                 adaptiveHeight: true,
