bug 113 [Hero] & 115 [Titles]

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <!-- About-->
       <section class="about-section" id="about">
         <div class="container">
-          <h2 class="text-white mb-4"><b>How it works</b></h2>
+          <h2 class="text-white mb-5"><b>How it works</b></h2>
           <div class="hr-divider-white"></div>
           <div class="row mt-5 text-white">
             <div class="col-lg-8 col-12 mx-auto">
@@ -222,7 +222,7 @@
           </a>
 
           <div class="container mt-5">
-            <div class="videos" data-video="assets/video/membrane-video.mp4" data-type="video/mp4" data-poster="assets/img/poster-video.png">
+            <div class="videos membrane-video" data-video="assets/video/membrane-video.mp4" data-type="video/mp4" data-poster="assets/img/poster-video.png">
 
           </div>
           <div class="row text-center mt-5">
@@ -274,7 +274,7 @@
       <!-- Projects-->
       <section class="why-section px-0" id="why-lantos">
         <div class="container text-center" style="padding-right: 0 !important">
-          <h2 class="mb-4 text-mint">
+          <h2 class="mb-5 text-mint">
             <b>Better experiences, better outcomes</b>
           </h2>
           <div class="hr-divider-grey mx-auto"></div>
@@ -301,8 +301,8 @@
               </p>
             </div>
           </div>
-          <h3 class="mt-5">Testimonials</h3>
-          <div class="hr-divider-grey mx-auto"></div>
+          <h3 class="mt-5 mb-4">Testimonials</h3>
+          <div class="hr-divider-grey mx-auto mb-5"></div>
 
           <div class="multiple-items mt-4 mt-md-6 row">
             <div class="col-md-6">
@@ -345,8 +345,8 @@
 
         <section class="team-section" id="team" style="position: relative">
           <div class="container text-center px-0">
-            <h2 class="text-white mobile-no mb-4"><b>Leadership team</b></h2>
-            <h2 class="text-white mobile mb-4">
+            <h2 class="text-white mobile-no mb-5"><b>Leadership team</b></h2>
+            <h2 class="text-white mobile mb-5">
               <b>Leadership<br />team</b>
             </h2>
             <div class="hr-divider-white mx-auto"></div>
@@ -435,9 +435,9 @@
       </div>
       <section class="contact-section" id="contact">
         <div class="container mt-5 mb-5">
-          <h2 class="text-center text-mint"><b>Want to learn more?</b></h2>
+          <h2 class="text-center text-mint mb-5"><b>Want to learn more?</b></h2>
           <div class="hr-divider-grey mx-auto"></div>
-          <h5 class="text-center">Schedule a live demo.</h5>
+          <h5 class="text-center mt-5">Schedule a live demo.</h5>
           <div class="row">
             <div class="col-lg-8 col-12 mx-auto mt-5">
               <form id="send_comment">
