--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                 </div>
 
-                <h5 class="mobile-1000"><b>Hear from an Audiologist</b></h5>
+                <!-- <h5 class="mobile-1000"><b>Hear from an Audiologist</b></h5> -->
               </div>
             </div>
             <div class="col-md-6">
@@ -320,7 +320,7 @@
 
                 </div>
 
-                <h5 class="mobile-1000"><b>Hear from a Consumer</b></h5>
+                <!-- <h5 class="mobile-1000"><b>Hear from a Consumer</b></h5> -->
               </div>
             </div>
 
